k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n-postgres
  template:
    metadata:
      labels:
        app: n8n-postgres
    spec:
      automountServiceAccountToken: false
      containers:
        - name: postgres
          image: postgres:18.1
          ports:
            - containerPort: 5432
              name: postgres
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
              ephemeral-storage: "512Mi"
            limits:
              cpu: "0.5"
              memory: "512Mi"
              ephemeral-storage: "2Gi"
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: n8n-postgres-data
